dist/LineScript-win64-20260616/tests/cases/compile_fail/macro_ret_stmt_not_supported.lsc
macro bad(x: expr) -> stmt do
  x
end

main() -> i64 do
  return 0
end
